# graph-data-models

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  docker-compose.optional.yml  pyproject.toml
case_studies/: README.md
case_studies/biomedical-kg/: README.md
case_studies/customer-360/: README.md
case_studies/cybersecurity-attack-path/: README.md
case_studies/data-catalog-lineage/: README.md
case_studies/fraud-detection/: README.md
case_studies/policy-entitlements/: README.md
case_studies/product-kg/: README.md
case_studies/supply-chain-risk/: README.md
data/: README.md
data/canonical/: alice_acme_ceo.json  competency_questions.json  (+1 more)
docs/: README.md  article-companion-map.md  canonical-running-example.md  comparison-matrix.md  glossary.md  modeling-same-example.md
examples/: README.md
scripts/: check_docs_links.py  check_no_placeholders.py  render_example_outputs.py
tests/: conftest.py  test_api_layer.py  test_canonical_fixtures.py  test_case_study_biomedical_supply_chain.py  test_case_study_data_catalog.py  test_case_study_fraud_customer360.py  test_case_study_security_policy_product.py  test_conversions_loss_audit.py  test_datalog_examples.py  test_decision_framework.py  test_docs_and_runner.py  test_eav_examples.py  test_gotchas.py  test_graphrag_examples.py  test_hypergraph_examples.py  test_hyperrel_examples.py  test_lpg_examples.py  test_quality_gate.py  test_query_language_catalog.py  test_rdf_examples.py  test_rdf_star_lowering.py  test_rdf_validation_inference.py  test_scaffold.py  test_topic_maps_examples.py
(+196 files in other folders)
